--- a/blank.html
+++ b/blank.html
@@ -5,9 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>AirMug Pro</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/default.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<div class="container">
+		<nav class="nav__global">
+			<div class="nav__global__links">
+				<a href="" class="nav__global__item">Rooms</a>
+				<a href="" class="nav__global__item">Ideas</a>
+				<a href="" class="nav__global__item">Stores</a>
+				<a href="" class="nav__global__item">Contact</a>
+			</div>
+		</nav>
+		<nav class="nav__local">
+			<div class="nav__local__links">
+				<a href="#" class="nav__local__product">Apple Mug</a>
+				<a href="#">개요</a>
+				<a href="#">제품사양</a>
+				<a href="#">구매하기</a>
+			</div>
+		</nav>
+	</div>
 </body>
 </html>
